[package]
name = "aoc2020"
version = "0.1.0"
authors = ["sim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.lalrpop] # <-- We added this and everything after!
version = "^0.19"
features = ["lexer"]

[dependencies]
lalrpop-util = "^0.19"